k8s/base/webhook-receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-receiver
  namespace: mesh-six
  labels:
    app: webhook-receiver
    app.kubernetes.io/part-of: mesh-six
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: webhook-receiver
